<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/title_chat" />

    <item
            android:id="@+id/navigation_available_hustles"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_available_hustles" />

    <item
            android:id="@+id/navigation_hustlr_hub"
            android:icon="@drawable/ic_folder_shared_black_24dp"
            android:title="@string/title_hustlr_hub" />

</menu>
