...
                app:destination="@id/navigation_available_hustles"
                app:popUpTo="@+id/navigation_available_hustles" />
        <argument android:name="hustle" />
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.myapplication.message.MessageListFragment"
        android:label="Messages"
        tools:layout="@layout/fragment_message_list" />
</navigation>
