<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/text_message_name"
        android:text="John Doe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/text_message_body"
        android:text="hello, hello!"
        android:background="@drawable/rounded_rectangle_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name" />

    <!-- TODO: Commenting out timestamp for now -->
    <!-- <TextView
        android:id="@+id/text_message_time"
        android:text="11:40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
        app:layout_constraintRight_toLeftOf="@+id/text_message_body" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>
